--- a/crmapp/frontend/src/app/components/client/client-details/client-details-agreements-tab/client-details-agreements-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-agreements-tab/client-details-agreements-tab.component.html
@@ -1,31 +1,33 @@
 <div class="ui-g-12">
   <div class="ui-g-10">
-    <p-table [value]="agreements" [columns]="columns" [responsive]="true">
-      <ng-template pTemplate="header">
-        <tr>
-          <th style="width:7%;text-align:center">ID</th>
-          <th style="text-align:center">Номер</th>
-          <th style="width:15%;text-align:center">Актуален с</th>
-          <th style="width:15%;text-align:center"></th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-agreement let-columns="columns">
-        <tr>
-          <td style="text-align:center">{{agreement.id}}</td>
-          <td style="text-align:start">{{agreement.number}}</td>
-          <td style="text-align:center">{{agreement.dateStart | date: 'dd.MM.y'}}</td>
-          <td style="text-align:center">
-            <button pButton type="button" label="Изменить" 
-              class="ui-button-success btn-block" icon="fa-edit"
-              [routerLink]="['/agreements', agreement?.id]">
-            </button>
-          </td>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="summary">
-          Кол-во записей: {{agreements?.length}}
-      </ng-template>
-    </p-table>
+    <p-card>
+      <p-table [value]="agreements" [columns]="columns" [responsive]="true">
+        <ng-template pTemplate="header">
+          <tr>
+            <th style="width:7%;text-align:center">ID</th>
+            <th style="text-align:center">Номер</th>
+            <th style="width:15%;text-align:center">Актуален с</th>
+            <th style="width:15%;text-align:center"></th>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-agreement let-columns="columns">
+          <tr>
+            <td style="text-align:center">{{agreement.id}}</td>
+            <td style="text-align:start">{{agreement.number}}</td>
+            <td style="text-align:center">{{agreement.dateStart | date: 'dd.MM.y'}}</td>
+            <td style="text-align:center">
+              <button pButton type="button" label="Изменить" 
+                class="ui-button-success btn-block" icon="fa-edit"
+                [routerLink]="['/agreements', agreement?.id]">
+              </button>
+            </td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="summary">
+            Кол-во записей: {{agreements?.length}}
+        </ng-template>
+      </p-table>
+    </p-card>
   </div>
   <div class="ui-g-2">
     <button pButton type="button" label="Новый договор" 
