--- a/crmapp/frontend/src/app/components/client/add-client/add-client.component.html
+++ b/crmapp/frontend/src/app/components/client/add-client/add-client.component.html
@@ -1,203 +1,100 @@
-<nav class="breadcrumb">
-  <div class="row">
-    <div class="col">
-      <h5>
-        <strong>
-          <a class="breadcrumb-item" routerLink="/clients">
-            <i class="fa fa-users">
-              </i> Клиенты
-          </a>
-          <span class="breadcrumb-item active">Новый клиент</span>
-        </strong>
-      </h5>
-    </div>
-  </div>
-</nav>
+<p-growl [value]="msgs"></p-growl>
 
-<p>
-
-<ul class="nav nav-tabs nav-fill">
-  <li class="nav-item">
-    <a class="nav-link active">
-      <i class="fa fa-address-card-o">
-        </i> <strong>Основные данные</strong>
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled">
-      <i class="fa fa-building-o">
-        </i> <strong>Адресы</strong>
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled">
-      <i class="fa fa-bank">
-        </i> <strong>Банковские реквизиты</strong>
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled">
-      <i class="fa fa-user-o">
-        </i> <strong>Руководители</strong>
-    </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled">
-      <i class="fa fa-file-text-o">
-        </i> <strong>Документооборот</strong>
-    </a>
-  </li>
-</ul>
-
-<p>
-
-<form (ngSubmit)="onSubmit()">
-
-  <div class="row">
-
-    <div class="col-md-10">
-
-      <div class="card">
-        <div class="card-body"> 
-
-          <div class="form-group row">
-            <label 
-              for="title"
-              class="col-md-3 col-form-label">
-              <strong>Полное название</strong>
-            </label> 
-            <div class="col-md">
-              <input 
-                [(ngModel)]="client.title"
-                type="text"
-                name="title"
-                class="form-control"
-                #clientTitle="ngModel"
-                minlength="2"
-                required>
-              <div 
-                *ngIf="clientTitle.errors?.required && clientTitle.touched" 
-                class="alert alert-danger">
-                Введите полное название!
-              </div>
-              <div 
-                *ngIf="clientTitle.errors?.minlength && clientTitle.touched" 
-                class="alert alert-danger">
-                Полное название должно быть не менее 2 символов!
-              </div>
+<div class="ui-g-12">
+  <form [formGroup]="userform" (ngSubmit)="onSubmit()">
+    <div class="ui-g-10">
+      <p-card>
+        <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+          <div class="ui-grid-row">
+            <div class="ui-grid-col-3">
+              <b>Полное название: *</b>
+            </div>
+            <div class="ui-grid-col-6">
+              <input pInputText type="text" formControlName="title" placeholder="Обязательное поле"
+                [(ngModel)]="client.title">
+            </div>
+            <div class="ui-grid-col-3">
+              <div class="ui-message ui-messages-error ui-corner-all" 
+                *ngIf="!userform.controls['title'].valid&&userform.controls['title'].dirty">
+                  <i class="fa fa-exclamation-circle"></i>
+                  Введите полное название (не менее 2 символов)!
+              </div>            
             </div>
           </div>
-
-          <div class="form-group row">
-            <label 
-              for="alias"
-              class="col-md-3 col-form-label">
-              <strong>Псевдоним</strong>
-            </label>
-            <div class="col-md">
-              <input 
-                [(ngModel)]="client.alias" 
-                type="text" 
-                name="alias"
-                class="form-control"
-                #clientAlias="ngModel" 
-                minlength="2" 
-                required>
-              <div 
-                *ngIf="clientAlias.errors?.required && clientAlias.touched" 
-                class="alert alert-danger">
-                Введите псевдоним!
-              </div>
-              <div 
-                *ngIf="clientAlias.errors?.minlength && clientAlias.touched" 
-                class="alert alert-danger">
-                Псевдоним должен содержать не менее 2 символов!
-              </div>
+          <div class="ui-grid-row">
+            <div class="ui-grid-col-3">
+              <b>Псевдоним: *</b>
+            </div>
+            <div class="ui-grid-col-6">
+              <input pInputText type="text" formControlName="alias" placeholder="Обязательное поле"
+                [(ngModel)]="client.alias">
+            </div>
+            <div class="ui-grid-col-3">
+              <div class="ui-message ui-messages-error ui-corner-all" 
+                *ngIf="!userform.controls['alias'].valid&&userform.controls['alias'].dirty">
+                  <i class="fa fa-exclamation-circle"></i>
+                  Введите псевдоним (не менее 2 символов)!
+              </div>            
             </div>
           </div>
-        
-          <div class="form-group row">
-            <label 
-              for="edrpou"
-              class="col-md-3 col-form-label">
-              <strong>ЕДРПОУ</strong>
-            </label>
-            <div class="col-md">
-              <input 
-                type="text" 
-                class="form-control" 
-                [(ngModel)]="client.edrpou" 
-                name="edrpou" 
-                #clientEdrpou="ngModel" 
-                minlength="7" 
-                required>
-              <div 
-                *ngIf="clientEdrpou.errors?.required && clientEdrpou.touched" 
-                class="alert alert-danger">
-                Введите ЕДРПОУ!
-              </div>
-              <div 
-                *ngIf="clientEdrpou.errors?.minlength && clientEdrpou.touched" 
-                class="alert alert-danger">
-                ЕДРПОУ должно содержать не менее 7 символов!
-              </div>
+          <div class="ui-grid-row">
+            <div class="ui-grid-col-3">
+              <b>ЕДРПОУ: *</b>
+            </div>
+            <div class="ui-grid-col-6">
+              <input pInputText type="text" formControlName="edrpou" 
+                placeholder="Обязательное поле" pKeyFilter="num"
+                [(ngModel)]="client.edrpou">
+            </div>
+            <div class="ui-grid-col-3">
+              <div class="ui-message ui-messages-error ui-corner-all" 
+                *ngIf="!userform.controls['edrpou'].valid&&userform.controls['edrpou'].dirty">
+                  <i class="fa fa-exclamation-circle"></i>
+                  Введите ЕДРПОУ (не менее 6 и не более 14 цифр)!
+              </div>            
             </div>
           </div>
-
-          <div class="form-group row">
-            <label 
-              for="inn"
-              class="col-md-3 col-form-label">
-              <strong>ИНН</strong>
-            </label>
-            <div class="col-md">
-              <input 
-                type="text" 
-                class="form-control" 
-                [(ngModel)]="client.inn" 
-                name="inn">
+          <div class="ui-grid-row">
+            <div class="ui-grid-col-3">
+              <b>ИНН:</b>
+            </div>
+            <div class="ui-grid-col-9">
+              <input pInputText type="text" formControlName="inn" 
+                placeholder="Введите ИНН (необязательное поле)"
+                [(ngModel)]="client.inn">
             </div>
           </div>
-
-          <div class="form-group row">
-            <label 
-              for="vatCertificate"
-              class="col-md-3 col-form-label">
-              <strong>№ свидетельства НДС</strong>
-            </label>
-            <div class="col-md">
-              <input 
-                type="text" 
-                class="form-control" 
-                [(ngModel)]="client.vatCertificate" 
-                name="vatCertificate">
+          <div class="ui-grid-row">
+            <div class="ui-grid-col-3"></div>
+            <div class="ui-grid-col-9">
+              <div class="ui-message ui-messages-error ui-corner-all" 
+                *ngIf="!userform.controls['inn'].valid">
+                  <i class="fa fa-exclamation-circle"></i>
+                  Введите не более 14 цифр)!
+              </div>  
             </div>
           </div>
-        
+          <div class="ui-grid-row">
+            <div class="ui-grid-col-3">
+              <b>№ свидетельства плат. НДС:</b>
+            </div>
+            <div class="ui-grid-col-6">
+              <input pInputText type="text" formControlName="vatCertificate" 
+                placeholder="Введите № свид. НДС (необязательное поле)"
+                [(ngModel)]="client.vatCertificate" >
+            </div>
+          </div>
         </div>
-      </div> 
-
+      </p-card>
     </div>
-
-    <div class="col-md-2">
-      <button 
-        type="submit" 
-        class="btn btn-success btn-block">
-          <i class="fa fa-check-square-o">
-            </i> Записать
+    <div class="ui-g-2">
+      <button pButton type="submit" label="Записать" [disabled]="!userform.valid"
+        class="ui-button-success btn-block" icon="fa-check-square-o">
       </button>
-      <a 
-        class="btn btn-danger btn-block"
+      <button pButton type="button" label="Отмена" 
+        class="ui-button-danger btn-block" icon="fa-times-rectangle-o"
         [routerLink]="['../']">
-        <i class="fa fa-times-rectangle-o">
-          </i> Отмена
-      </a> 
+      </button>
     </div>
-
-  </div>
-
-</form>
-
-
-  
-
+  </form>
+</div>
