UI: some changes in 'clients' view presentation

--- a/crmapp/frontend/src/app/components/client/clients/clients.component.html
+++ b/crmapp/frontend/src/app/components/client/clients/clients.component.html
@@ -1,15 +1,18 @@
+<p-toolbar>
+    <div class="ui-toolbar-group-left">
+        <button pButton type="button" label="Добавить" 
+            [routerLink]="['/clients/add']" icon="fa-plus">
+        </button>
+    </div>
+    <div class="ui-toolbar-group-right">
+        <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+        <input type="text" pInputText size="50" placeholder="Фильтр" (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto">
+    </div>
+</p-toolbar>
+<p><p>
 <p-table #dt [columns]="columns" [responsive]="true"
     [value]="clients" [reorderableColumns]="true" 
     [paginator]="true" [rows]="10">
-    <ng-template pTemplate="caption">
-        <div style="text-align: right">     
-            <p-button icon="fa fa-plus-circle" style="float:left" 
-                label="Добавить" [routerLink]="['/clients/add']">
-            </p-button>
-            <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
-            <input type="text" pInputText size="50" placeholder="Фильтр" (input)="dt.filterGlobal($event.target.value, 'contains')" style="width:auto">
-            </div>
-    </ng-template>
     <ng-template pTemplate="header" let-columns>
         <tr>
             <th *ngFor="let column of columns" class="text-center" 
@@ -35,6 +38,6 @@
         </tr>
     </ng-template>
     <ng-template pTemplate="summary">
-        Кол-во записей: {{clients?.length}} шт.
+        Кол-во записей: {{clients?.length}}
     </ng-template>
 </p-table>
