--- a/crmapp/frontend/src/app/components/client/add-client/add-client.component.html
+++ b/crmapp/frontend/src/app/components/client/add-client/add-client.component.html
@@ -1,5 +1,29 @@
 <p-growl [value]="msgs"></p-growl>
 
+<p-sidebar [(visible)]="display" [baseZIndex]="10000">
+  <h4 style="font-weight:normal">
+    Главное меню
+  </h4>
+  <app-dashboard-menu></app-dashboard-menu>
+</p-sidebar>
+
+<div class="ui-g">
+  <div class="ui-g-4">
+    <button pButton type="button" (click)="display = true" icon="fa-bars"></button>
+    <button pButton type="button" label="Вернуться" class="ui-button-info"
+      icon="fa-arrow-circle-o-left" routerLink="../"></button>
+  </div>
+  <div class="ui-g-8">
+    <h4 style="font-weight:normal">
+      <b><ins>Новый клиент</ins></b>
+    </h4>
+  </div>
+</div>
+
+<div>
+    <p-tabMenu [model]="items"></p-tabMenu>
+</div>
+
 <div class="ui-g-12">
   <form [formGroup]="userform" (ngSubmit)="onSubmit()">
     <div class="ui-g-10">
@@ -58,15 +82,12 @@
             <div class="ui-grid-col-3">
               <b>ИНН:</b>
             </div>
-            <div class="ui-grid-col-9">
+            <div class="ui-grid-col-6">
               <input pInputText type="text" formControlName="inn" 
                 placeholder="Введите ИНН (необязательное поле)"
                 [(ngModel)]="client.inn">
             </div>
-          </div>
-          <div class="ui-grid-row">
-            <div class="ui-grid-col-3"></div>
-            <div class="ui-grid-col-9">
+            <div class="ui-grid-col-3">
               <div class="ui-message ui-messages-error ui-corner-all" 
                 *ngIf="!userform.controls['inn'].valid">
                   <i class="fa fa-exclamation-circle"></i>
