UI: fixing in app.module, employee.sevice etc.
[app.module.ts]:
* router link fixing;

[employee-details.component.html]:
* components added (buttons, sidebar);

[employee.service.ts]:
* catchError added in methods;
* BehaviorSubject uses Employee;

--- a/crmapp/frontend/src/app/components/employee/employee-details/employee-details.component.html
+++ b/crmapp/frontend/src/app/components/employee/employee-details/employee-details.component.html
@@ -1,34 +1,27 @@
-<nav class="breadcrumb">
-	<div class="row">
-		<div class="col">
-			<h5>
-				<strong>
-					<a class="breadcrumb-item" routerLink="/employees">
-						<i class="fa fa-users"></i> Сотрудники
-					</a>
-					<span class="breadcrumb-item active">{{employee?.shortName}}</span>
-				</strong>
-			</h5>
-		</div>
+<p-sidebar [(visible)]="display" [baseZIndex]="10000">
+	<h4 style="font-weight:normal">
+		Главное меню
+	</h4>
+	<app-dashboard-menu></app-dashboard-menu>
+</p-sidebar>
+
+<div class="ui-g">
+	<div class="ui-g-4">
+		<button pButton type="button" (click)="display = true" 
+			icon="fa-bars">
+		</button>
+		<button pButton type="button" label="Вернуться" class="ui-button-info"
+			icon="fa-arrow-circle-o-left" routerLink="../">
+		</button>
 	</div>
-</nav>
+	<div class="ui-g-8">
+		<h4 style="font-weight:normal">
+			<b><ins>{{employee.personShortName}}</ins></b>
+		</h4>
+	</div>
+</div>
 
 <div>
 	<app-employee-details-tabs></app-employee-details-tabs>
 	<router-outlet></router-outlet>
 </div>
-		
-				
-		
-
-	
-
-
-
-
-	
-	  
-		
-
-
-
