UI: minor changes in components

--- a/crmapp/frontend/src/app/components/client/add-client/add-client.component.html
+++ b/crmapp/frontend/src/app/components/client/add-client/add-client.component.html
@@ -21,7 +21,7 @@
 </div>
 
 <div>
-    <p-tabMenu [model]="items"></p-tabMenu>
+    <p-tabMenu [model]="tabs"></p-tabMenu>
 </div>
 
 <div class="ui-g-12">
