--- a/crmapp/frontend/src/app/components/client/client-details/client-details-main-tab/client-details-main-tab.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-main-tab/client-details-main-tab.component.html
@@ -3,9 +3,11 @@
 <p-confirmDialog header="Confirmation" icon="fa fa-question-circle" width="425" #cd>
     <p-footer>
         <button type="button" pButton icon="fa-check" 
-          class="ui-button-primary" label="Ок" (click)="cd.accept()"></button>
+          class="ui-button-primary" label="Ок" (click)="cd.accept()">
+        </button>
         <button type="button" pButton icon="fa-close" 
-          class="ui-button-secondary" label="Отмена" (click)="cd.reject()"></button>
+          class="ui-button-secondary" label="Отмена" (click)="cd.reject()">
+        </button>
     </p-footer>
 </p-confirmDialog>
 
