UI:  refactored code (ts), correction in routerLink (html)

--- a/crmapp/frontend/src/app/components/person/persons/persons.component.html
+++ b/crmapp/frontend/src/app/components/person/persons/persons.component.html
@@ -33,7 +33,7 @@
           <td class="text-center">
               <button pButton type="button" class="ui-button-info" 
                   icon="fa-arrow-circle-o-right" label="Подробнее" 
-                  [routerLink]="['/persons', persons?.id]">
+                  [routerLink]="['/persons', person?.id]">
               </button>
           </td>
       </tr>
