--- a/crmapp/frontend/src/app/components/client/client-details/client-details-accounts-tab/edit-account/edit-account.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-accounts-tab/edit-account/edit-account.component.html
@@ -28,8 +28,8 @@
               <b>Действует с:</b>
             </div>
             <div class="ui-grid-col-3">
-              <p-calendar [(ngModel)]="account&&account.dateStart" name="dateStart" 
-                [monthNavigator]="true" [yearNavigator]="true" yearRange="{{years}}"
+              <p-calendar [(ngModel)]="account&&account.dateStart" name="dateStart" placeholder="Дата" 
+                [monthNavigator]="true" [yearNavigator]="true" yearRange="{{years}}" [locale]="ru" 
                 showButtonBar="true" [showIcon]="true" dateFormat="dd.mm.yy">
               </p-calendar>
             </div>
