--- a/crmapp/frontend/src/app/components/client/client-details/client-details-directors-tab/add-director/add-director.component.html
+++ b/crmapp/frontend/src/app/components/client/client-details/client-details-directors-tab/add-director/add-director.component.html
@@ -39,7 +39,7 @@
             </div>
             <div class="ui-grid-col-3">
               <p-calendar [(ngModel)]="director.dateStart" name="dateStart" placeholder="Дата"
-                [monthNavigator]="true" [yearNavigator]="true" yearRange="{{years}}"
+                [monthNavigator]="true" [yearNavigator]="true" yearRange="{{years}}" [locale]="ru" 
                 showButtonBar="true" [showIcon]="true" dateFormat="dd.mm.yy"></p-calendar>
             </div>
           </div>
