--- a/crmapp/frontend/src/app/components/client/clients/clients.component.html
+++ b/crmapp/frontend/src/app/components/client/clients/clients.component.html
@@ -11,12 +11,12 @@
     </div>
 </p-toolbar>
 <p><p>
-<p-table #dt [columns]="columns" [responsive]="true"
-    [value]="clients" [reorderableColumns]="true" 
+<p-table #dt [columns]="columns" [responsive]="true" [loading]="loading"
+    [value]="clients" [reorderableColumns]="true" [rowHover]="true" 
     [paginator]="true" [rows]="10">
     <ng-template pTemplate="header" let-columns>
         <tr>
-            <th *ngFor="let column of columns" class="text-center" 
+            <th *ngFor="let column of columns" style="text-align:center" 
                 [pSortableColumn]="column.field" pReorderableColumn>
                 {{column.header}}
                 <p-sortIcon [field]="column.field"></p-sortIcon>
@@ -26,14 +26,19 @@
     </ng-template>
     <ng-template pTemplate="body" let-client let-rowData let-columns="columns">
         <tr>
-            <td *ngFor="let column of columns" class="text-center">
+            <td *ngFor="let column of columns" style="text-align:center"
+                (click)="goToClient(client?.url)">
                 <span class="ui-column-title">{{column.header}}</span>
                 {{rowData[column.field]}}
             </td>
-            <td class="text-center">
+            <td style="text-align:center">
                 <button pButton type="button" class="ui-button-info" 
                     icon="fa-arrow-circle-o-right" label="Подробнее" 
-                    [routerLink]="['/clients', client?.id]">
+                    (click)="goToClient(client?.url)">
+                </button>
+                <p-tieredMenu #menu [model]="items" [popup]="true" appendTo="body"></p-tieredMenu>
+                <button #btn pButton type="button" icon="fa-list" class="ui-button-info" 
+                    (click)="menu.toggle($event)" (mousedown)="initMenu(client?.id)">
                 </button>
             </td>
         </tr>
