--- a/crmapp/frontend/src/app/components/agreement/agreements/agreements.component.html
+++ b/crmapp/frontend/src/app/components/agreement/agreements/agreements.component.html
@@ -1,77 +1,63 @@
-<div class="card">
-    <h5 class="card-header text-center">
-        <strong>
-            <i class="fa fa-users">
-                </i> Договорные отношения
-        </strong>
-    </h5>
-
-    <div class="card-body">
-
-        <div class="row">
-            <div class="col-md-10">
-
-                <div class="card">
-                    <div class="card-body"> 
-
-                        <table class="table table-sm"
-                            *ngIf="agreements?.length > 0; else noAgreements">
-                    
-                            <thead class="thead-default">
-                                <tr>
-                                    <th class="text-center">Контрагент</th>
-                                    <th class="text-center">Номер</th>
-                                    <th class="text-center">Дата</th>
-                                    <th class="text-center"></th>
-                                </tr>
-                            </thead>
-                    
-                            <tr *ngFor="let agreement of agreements">
-                                <td class="text-center">
-                                    <a class="card-link"
-                                        [routerLink]="['/clients', agreement.clientId, 'agreements']">
-                                        {{agreement.clientAlias}}
-                                    </a>
-                                </td>
-                                <td class="text-center">
-                                    {{agreement.number}}
-                                </td>
-                                <td class="text-center">
-                                    {{agreement.dateStart | date: 'dd.MM.y'}}
-                                </td>
-                                <td class="text-right">
-                                    <a class="btn btn-info btn-sm"
-                                        [routerLink]="['/agreements', agreement?.id]">
-                                        <i class="fa fa-arrow-circle-o-right"></i> Подробнее
-                                    </a>
-                                </td>
-                            </tr>
-
-                        </table>
-
-                    </div>
-                </div>
-        
-                <ng-template #noAgreements>
-                    <div class="alert alert-light" role="alert">
-                        <h6 class="lead text-center">
-                            <b>Нет ни одного договора в системе...</b>
-                        </h6>
-                    </div>
-                </ng-template>
-
-            </div>
-
-            <div class="col-md-2">
-                <app-sidebar 
-                    [url] = "['/agreements/add']" 
-                    [title] = "['Добавить']">
-                </app-sidebar>
-            </div>
-
-        </div>
-
+<p-toolbar>
+    <div class="ui-toolbar-group-left">
+        <button pButton type="button" label="Добавить" 
+            [routerLink]="['add']" icon="fa-plus">
+        </button>
     </div>
+    <div class="ui-toolbar-group-right">
+        <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+        <input type="text" pInputText size="50" placeholder="Фильтр" style="width:auto" 
+            (input)="dt.filterGlobal($event.target.value, 'contains')">
+    </div>
+</p-toolbar>
 
+<div class="text-center" style="margin-top:6px">
+    <h4>Договоры с клиентами</h4>
 </div>
 
+<p-card>
+    <p-table #dt [columns]="columns" [responsive]="true" [loading]="loading"
+        [value]="agreements" [reorderableColumns]="true" [rowHover]="true" 
+        [paginator]="true" [rows]="10">
+        <ng-template pTemplate="header" let-columns>
+            <tr>
+                <th *ngFor="let column of columns" style="text-align:center" 
+                    [pSortableColumn]="column.field" pReorderableColumn>
+                    {{column.header}}
+                    <p-sortIcon [field]="column.field"></p-sortIcon>
+                </th>
+                <th></th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-agreement let-rowData let-columns="columns">
+            <tr>
+                <td *ngFor="let column of columns" style="text-align:center"
+                    (click)="goToAgreement(agreement?.url)">
+                    <span class="ui-column-title">{{column.header}}</span>
+                    {{rowData[column.field]}}
+                </td>
+                <td style="text-align:center">
+                    <button pButton type="button" class="ui-button-info" 
+                        icon="fa-arrow-circle-o-right" label="Подробнее" 
+                        (click)="goToAgreement(agreement?.url)">
+                    </button>
+                    <p-tieredMenu #menu [model]="items" [popup]="true" appendTo="body"></p-tieredMenu>
+                    <button #btn pButton type="button" icon="fa-list" class="ui-button-info" 
+                        (click)="menu.toggle($event)" (mousedown)="initMenu(agreement?.id)">
+                    </button>
+                </td>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="summary">
+            Кол-во записей: {{agreements?.length}}
+        </ng-template>
+    </p-table>
+</p-card>
+
+<ng-template #noAgreements>
+    <div class="alert alert-light" role="alert">
+        <h6 class="lead text-center">
+            <b>Нет ни одного договора в системе...</b>
+        </h6>
+    </div>
+</ng-template>
