--- a/crmapp/frontend/src/app/components/dashboard/dashboard-table/dashboard-table.component.html
+++ b/crmapp/frontend/src/app/components/dashboard/dashboard-table/dashboard-table.component.html
@@ -1,17 +1,4 @@
-<p-toolbar>
-    <div class="ui-toolbar-group-left">
-        <button pButton type="button" label="Добавить" style="margin-top:3px" 
-            [routerLink]="['add']" icon="fa-plus">
-        </button>
-    </div>
-    <div class="ui-toolbar-group-right">
-        <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
-        <input type="text" pInputText size="50" placeholder="Фильтр" style="width:auto" 
-            (input)="dt.filterGlobal($event.target.value, 'contains')">
-    </div>
-</p-toolbar>
-
-<div class="text-center" style="margin-top:6px">
+<div class="text-center"> 
     <h4>{{title}}</h4>
 </div>
 
@@ -19,7 +6,20 @@
     <p-table #dt [columns]="columns" [responsive]="responsive" 
         [value]="datasource" [reorderableColumns]="reorderableColumns" 
         [rows]="rows" [rowHover]="rowHover" [paginator]="paginator" 
-        *ngIf="datasource?.length > 0; else loadingStatus">
+        [loading]="loading"
+        *ngIf="datasource?.length>0&&loading===false; else loadingStatus" >
+        <ng-template pTemplate="caption">
+            <div style="float: left"> 
+                <button pButton type="button" label="Добавить" style="margin-top:3px" 
+                    [routerLink]="['add']" icon="fa-plus">
+                </button>
+            </div>
+            <div style="text-align: right">
+                <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
+                <input type="text" pInputText size="50" placeholder="Фильтр" style="width:auto" 
+                    (input)="dt.filterGlobal($event.target.value, 'contains')">
+            </div>
+        </ng-template>
         <ng-template pTemplate="header" let-columns>
             <tr>
                 <th *ngFor="let column of columns" style="text-align:center" 
@@ -42,7 +42,9 @@
                         icon="fa-arrow-circle-o-right" label="Подробнее" 
                         (click)="goToEntry(datasource?.url)">
                     </button>
-                    <p-tieredMenu #menu [model]="items" [popup]="true" appendTo="body"></p-tieredMenu>
+                    <p-tieredMenu #menu [model]="menuModel" [popup]="true" 
+                        appendTo="body">
+                    </p-tieredMenu>
                     <button #btn pButton type="button" icon="fa-list" class="ui-button-info" 
                         (click)="menu.toggle($event)" (mousedown)="initMenu(datasource?.id)">
                     </button>
@@ -56,11 +58,5 @@
 </p-card>
 
 <ng-template #loadingStatus>
-    <h4 class="text-center">
-        Загрузка таблицы...
-        <p>
-        <p-progressSpinner [style]="{width: '50px', height: '50px'}" strokeWidth="8" 
-            fill="#EEEEEE" animationDuration=".5s">
-        </p-progressSpinner>
-    </h4>
+    <app-loading-status></app-loading-status>
 </ng-template> 
