--- a/crmapp/frontend/src/app/components/employee/employees/employees.component.html
+++ b/crmapp/frontend/src/app/components/employee/employees/employees.component.html
@@ -1,50 +1,6 @@
-<p-toolbar>
-    <div class="ui-toolbar-group-left">
-        <button pButton type="button" label="Добавить" 
-            [routerLink]="['add']" icon="fa-plus">
-        </button>
-    </div>
-    <div class="ui-toolbar-group-right">
-        <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
-        <input type="text" pInputText size="50" placeholder="Фильтр" style="width:auto"
-            (input)="dt.filterGlobal($event.target.value, 'contains')">
-    </div>
-</p-toolbar>
-<p>
-<p>
-
-<p-table #dt [columns]="columns" [responsive]="true" [loading]="loading" 
-    [value]="employees" [reorderableColumns]="true" [rowHover]="true"
-    [paginator]="true" [rows]="10">
-    <ng-template pTemplate="header" let-columns>
-        <tr>
-            <th *ngFor="let column of columns" style="text-align:center"
-                [pSortableColumn]="column.field" pReorderableColumn>
-                {{column.header}}
-                <p-sortIcon [field]="column.field"></p-sortIcon>
-            </th>
-            <th></th> 
-        </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-employee let-rowData let-columns="columns">
-        <tr>
-            <td *ngFor="let column of columns" style="text-align:center">
-                <span class="ui-column-title">{{column.header}}</span>
-                {{rowData[column.field]}}
-            </td>
-            <td class="text-center">
-                <button pButton type="button" class="ui-button-info" 
-                    icon="fa-arrow-circle-o-right" label="Подробнее" 
-                    (click)="goToEmployee(employee?.url)">
-                </button>
-                <p-tieredMenu #menu [model]="items" [popup]="true" appendTo="body"></p-tieredMenu>
-                <button #btn pButton type="button" icon="fa-list" class="ui-button-info" 
-                    (click)="menu.toggle($event)" (mousedown)="initMenu(employee?.id)">
-                </button>
-            </td>
-        </tr>
-    </ng-template>
-    <ng-template pTemplate="summary">
-        Кол-во записей: {{employees?.length}}
-    </ng-template>
-</p-table>
+<app-dashboard-table [title]="['Сотрудники']" 
+    [columns]="columns" [datasource]="employees" 
+    [responsive]="true" [reorderableColumns]="true" 
+    [rows]="0" [paginator]="false" [rowHover]="true" 
+    [loading]="false" [menuModel]="items">
+</app-dashboard-table>
