UI: minor fixes

--- a/crmapp/frontend/src/app/components/client/clients/clients.component.html
+++ b/crmapp/frontend/src/app/components/client/clients/clients.component.html
@@ -2,5 +2,6 @@
     [columns]="columns" [datasource]="clients" 
     [responsive]="true" [reorderableColumns]="true" 
     [rows]="0" [paginator]="false" [rowHover]="true" 
-    [loading]="false" [menuModel]="items">
+    [loading]="false" [menuModel]="items" 
+    >
 </app-dashboard-table>
