UI: replaced p-card with p-panel

--- a/crmapp/frontend/src/app/components/dashboard/dashboard-table/dashboard-table.component.html
+++ b/crmapp/frontend/src/app/components/dashboard/dashboard-table/dashboard-table.component.html
@@ -1,19 +1,20 @@
-<div class="text-center"> 
-    <h4>{{title}}</h4>
-</div>
-
-<p-card>
+<p-panel>
+    <p-header>
+        <div class="ui-helper-clearfix">
+            <span class="ui-panel-title" style="display:inline-block;margin-top:6px">
+                <h4><b>{{title}}</b></h4>
+            </span>  
+            <button pButton type="button" label="Добавить" style="margin-top:6px;float:right" 
+                [routerLink]="['add']" icon="fa-plus">
+            </button>
+        </div>
+    </p-header>
     <p-table #dt [columns]="columns" [responsive]="responsive" 
         [value]="datasource" [reorderableColumns]="reorderableColumns" 
         [rows]="rows" [rowHover]="rowHover" [paginator]="paginator" 
         [loading]="loading"
         *ngIf="datasource?.length>0&&loading===false; else loadingStatus" >
         <ng-template pTemplate="caption">
-            <div style="float: left"> 
-                <button pButton type="button" label="Добавить" style="margin-top:3px" 
-                    [routerLink]="['add']" icon="fa-plus">
-                </button>
-            </div>
             <div style="text-align: right">
                 <i class="fa fa-search" style="margin:4px 4px 0 0"></i>
                 <input type="text" pInputText size="50" placeholder="Фильтр" style="width:auto" 
@@ -56,7 +57,7 @@
             Кол-во записей: {{datasource?.length}}
         </ng-template>
     </p-table>
-</p-card>
+</p-panel>
 
 <ng-template #loadingStatus>
     <app-loading-status></app-loading-status>
