FE: minor fixes in navbar, document model

--- a/crmapp/frontend/src/app/components/navbar/navbar.component.html
+++ b/crmapp/frontend/src/app/components/navbar/navbar.component.html
@@ -23,7 +23,7 @@
   
   <div class="ui-g-12 ui-md-{{gridWidth}} ui-g-nopad">
     <div class="ui-g-12">
-      <app-navbar-menu-bar [model]="menubarItems"></app-navbar-menu-bar>
+      <app-navbar-menu-bar [model]="menubarItems" [autoDisplay]="false"></app-navbar-menu-bar>
     </div>
   
     <div class="ui-g-12 ui-g-nopad">
